// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContactCard renders 1`] = `
<DocumentFragment>
  <div
    class="md-flex-wrapper md-flex-direction-column md-flex-justify-content-flex-start md-flex-align-items-center md-flex-align-content-flex-start md-flex-nowrap wxc wxc-contact-card"
    data-xgap="false"
    data-ygap="true"
    style="--md-globals-flex-ygap-size: 15px;"
  >
    <div
      class="md-avatar-wrapper wxc-contact-card__avatar"
      data-color="default"
      data-size="88"
      title="Mr. Jill D'Amore V"
    >
      <span>
        MV
      </span>
    </div>
    <h1
      class="md-text-wrapper wxc-contact-card__name"
      data-type="banner-secondary"
    >
      Mr. Jill D'Amore V
    </h1>
    <div
      class="wxc-contact-card__select md-select-wrapper"
    >
      <div
        aria-hidden="true"
        style="border: 0px; clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
      >
        <input
          style="font-size: 16px;"
          tabindex="-1"
          type="text"
        />
        <label>
          <select
            size="5"
            tabindex="-1"
          >
            <option />
            <option
              value="+1-201-777-0041"
            >
              pumpernickel: +1-201-777-0041
            </option>
            <option
              value="+1-313-135-8198"
            >
              glow: +1-313-135-8198
            </option>
            <option
              value="Janet.Windler@yahoo.com"
            >
              daylight: Janet.Windler@yahoo.com
            </option>
            <option
              value="Jeremy63@yahoo.com"
            >
              resolve: Jeremy63@yahoo.com
            </option>
            <option
              value="Princess60@yahoo.com"
            >
              tactics: Princess60@yahoo.com
            </option>
          </select>
        </label>
      </div>
      <button
        aria-describedby="react-aria-generated-id react-aria-generated-id"
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-label="select address to call"
        aria-labelledby="react-aria-generated-id react-aria-generated-id"
        class="md-select-dropdown-input md-select-selected"
        id="react-aria-generated-id"
        type="button"
      >
        <span
          class="md-select-selected-item-wrapper"
          id="react-aria-generated-id"
          title="pumpernickel: +1-201-777-0041"
        >
          pumpernickel: +1-201-777-0041
        </span>
        <span
          aria-hidden="true"
          class="md-select-icon-wrapper"
        />
      </button>
    </div>
    <div
      class="md-flex-wrapper md-flex-direction-row md-flex-justify-content-flex-start md-flex-align-items-center md-flex-align-content-flex-start md-flex-nowrap"
      data-xgap="true"
      data-ygap="false"
      style="--md-globals-flex-xgap-size: 32px;"
    >
      <div
        class="md-flex-wrapper md-flex-direction-column md-flex-justify-content-flex-start md-flex-align-items-center md-flex-align-content-flex-start md-flex-nowrap"
        data-xgap="false"
        data-ygap="true"
        style="--md-globals-flex-ygap-size: 8px;"
      >
        <button
          aria-label="makeAudioCallTo"
          class="md-button-circle-wrapper md-button-simple-wrapper"
          data-color="join"
          data-disabled="false"
          data-ghost="false"
          data-multiple-children="false"
          data-outline="false"
          data-size="52"
          type="button"
        />
        <p
          class="md-text-wrapper"
          data-type="body-primary"
        >
          audio
        </p>
      </div>
      <div
        class="md-flex-wrapper md-flex-direction-column md-flex-justify-content-flex-start md-flex-align-items-center md-flex-align-content-flex-start md-flex-nowrap"
        data-xgap="false"
        data-ygap="true"
        style="--md-globals-flex-ygap-size: 8px;"
      >
        <button
          aria-label="makeVideoCallTo"
          class="md-button-circle-wrapper md-button-simple-wrapper"
          data-color="join"
          data-disabled="false"
          data-ghost="false"
          data-multiple-children="false"
          data-outline="false"
          data-size="52"
          type="button"
        />
        <p
          class="md-text-wrapper"
          data-type="body-primary"
        >
          video
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ContactCard renders user with 0 callable 1`] = `
<DocumentFragment>
  <div
    class="md-flex-wrapper md-flex-direction-column md-flex-justify-content-flex-start md-flex-align-items-center md-flex-align-content-flex-start md-flex-nowrap wxc wxc-contact-card"
    data-xgap="false"
    data-ygap="true"
    style="--md-globals-flex-ygap-size: 15px;"
  >
    <div
      class="md-avatar-wrapper wxc-contact-card__avatar"
      data-color="default"
      data-size="88"
      title="Jose Stracke"
    >
      <span>
        JS
      </span>
    </div>
    <h1
      class="md-text-wrapper wxc-contact-card__name"
      data-type="banner-secondary"
    >
      Jose Stracke
    </h1>
    <small
      class="md-text-wrapper wxc-contact-card__text-address"
      data-type="body-secondary"
    >
      No addresses found
    </small>
    <div
      class="md-flex-wrapper md-flex-direction-row md-flex-justify-content-flex-start md-flex-align-items-center md-flex-align-content-flex-start md-flex-nowrap"
      data-xgap="true"
      data-ygap="false"
      style="--md-globals-flex-xgap-size: 32px;"
    >
      <div
        class="md-flex-wrapper md-flex-direction-column md-flex-justify-content-flex-start md-flex-align-items-center md-flex-align-content-flex-start md-flex-nowrap"
        data-xgap="false"
        data-ygap="true"
        style="--md-globals-flex-ygap-size: 8px;"
      >
        <button
          aria-label="makeAudioCallTo"
          class="md-button-circle-wrapper md-button-simple-wrapper"
          data-color="join"
          data-disabled="true"
          data-ghost="false"
          data-multiple-children="false"
          data-outline="false"
          data-size="52"
          disabled=""
          type="button"
        />
        <p
          class="md-text-wrapper"
          data-type="body-primary"
        >
          audio
        </p>
      </div>
      <div
        class="md-flex-wrapper md-flex-direction-column md-flex-justify-content-flex-start md-flex-align-items-center md-flex-align-content-flex-start md-flex-nowrap"
        data-xgap="false"
        data-ygap="true"
        style="--md-globals-flex-ygap-size: 8px;"
      >
        <button
          aria-label="makeVideoCallTo"
          class="md-button-circle-wrapper md-button-simple-wrapper"
          data-color="join"
          data-disabled="true"
          data-ghost="false"
          data-multiple-children="false"
          data-outline="false"
          data-size="52"
          disabled=""
          type="button"
        />
        <p
          class="md-text-wrapper"
          data-type="body-primary"
        >
          video
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ContactCard renders user with 1 callable 1`] = `
<DocumentFragment>
  <div
    class="md-flex-wrapper md-flex-direction-column md-flex-justify-content-flex-start md-flex-align-items-center md-flex-align-content-flex-start md-flex-nowrap wxc wxc-contact-card"
    data-xgap="false"
    data-ygap="true"
    style="--md-globals-flex-ygap-size: 15px;"
  >
    <div
      class="md-avatar-wrapper wxc-contact-card__avatar"
      data-color="default"
      data-size="88"
      title="Brandy Rosenbaum"
    >
      <span>
        BR
      </span>
    </div>
    <h1
      class="md-text-wrapper wxc-contact-card__name"
      data-type="banner-secondary"
    >
      Brandy Rosenbaum
    </h1>
    <small
      class="md-text-wrapper wxc-contact-card__text-address"
      data-type="body-secondary"
    >
      +1-106-228-0822
    </small>
    <div
      class="md-flex-wrapper md-flex-direction-row md-flex-justify-content-flex-start md-flex-align-items-center md-flex-align-content-flex-start md-flex-nowrap"
      data-xgap="true"
      data-ygap="false"
      style="--md-globals-flex-xgap-size: 32px;"
    >
      <div
        class="md-flex-wrapper md-flex-direction-column md-flex-justify-content-flex-start md-flex-align-items-center md-flex-align-content-flex-start md-flex-nowrap"
        data-xgap="false"
        data-ygap="true"
        style="--md-globals-flex-ygap-size: 8px;"
      >
        <button
          aria-label="makeAudioCallTo"
          class="md-button-circle-wrapper md-button-simple-wrapper"
          data-color="join"
          data-disabled="false"
          data-ghost="false"
          data-multiple-children="false"
          data-outline="false"
          data-size="52"
          type="button"
        />
        <p
          class="md-text-wrapper"
          data-type="body-primary"
        >
          audio
        </p>
      </div>
      <div
        class="md-flex-wrapper md-flex-direction-column md-flex-justify-content-flex-start md-flex-align-items-center md-flex-align-content-flex-start md-flex-nowrap"
        data-xgap="false"
        data-ygap="true"
        style="--md-globals-flex-ygap-size: 8px;"
      >
        <button
          aria-label="makeVideoCallTo"
          class="md-button-circle-wrapper md-button-simple-wrapper"
          data-color="join"
          data-disabled="false"
          data-ghost="false"
          data-multiple-children="false"
          data-outline="false"
          data-size="52"
          type="button"
        />
        <p
          class="md-text-wrapper"
          data-type="body-primary"
        >
          video
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
